change the quiz functionallity
